<resources>
    <string name="app_name">MySpurs Player Profile</string>
    <string name="height_weight">Height / Weight</string>
    <string name="_180cm_68kg">180cm / 68kg</string>
    <string name="nationality">Nationality</string>
    <string name="indonesia">Indonesia</string>
    <string name="born">Born</string>
    <string name="_24_agustus_2000">24 Agustus 2000</string>
    <string name="rifqi_agustia">Rifqi Agustia</string>
    <string name="position">Position</string>
    <string name="right_back">Right Back</string>
    <string name="player_profile">Player Profile</string>
    <string-array name="data_name">
        <item>Yves Bissouma</item>
        <item>James Maddison</item>
        <item>Pedro Porro </item>
        <item>Richarlison </item>
        <item>Cristian Romero</item>
        <item>Emerson Royal </item>
        <item>Davinson Sanchez </item>
        <item>Oliver Skipp </item>
        <item>Heung-Min Son </item>
        <item>Eric Dier </item>
        <item>Rodrigo Bentancur </item>
        <item>Fraser Forster </item>
        <item> Hugo Lloris</item>
    </string-array>
    <string-array name="data_height_weight">
        <item>181cm, 72kg </item>
        <item>175cm, 72kg </item>
        <item>176cm, 68kg </item>
        <item>179cm, 71kg </item>
        <item>185cm, 82kg </item>
        <item>187cm, 75kg </item>
        <item>188cm, 77kg </item>
        <item>177cm, 66kg </item>
        <item>183cm, 76kg </item>
        <item>188cm, 87kg </item>
        <item>185cm, 73kg </item>
        <item>201cm, 92kg </item>
        <item>188cm, 78kg </item>
    </string-array>
</resources>