<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    >


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="-4dp"

        >


        <TextView
            android:id="@+id/tvName"
            android:layout_width="372dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.572"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.02" />

        <ImageView
            android:id="@+id/img_profile"
            android:layout_width="194dp"
            android:layout_height="213dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="32dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvName"
            app:srcCompat="@drawable/bentacur" />

        <TextView
            android:id="@+id/tv_position"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="72dp"
            android:text="@string/position"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.173"
            app:layout_constraintStart_toEndOf="@+id/img_profile"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_position_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/right_back"
            app:layout_constraintEnd_toEndOf="@+id/tv_position"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/tv_position"
            app:layout_constraintTop_toBottomOf="@+id/tv_position" />

        <TextView
            android:id="@+id/tv_height_weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/height_weight"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/tv_nationality"
            app:layout_constraintTop_toBottomOf="@+id/tv_nationality_value" />

        <TextView
            android:id="@+id/tv_height_weight_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_180cm_68kg"
            app:layout_constraintEnd_toEndOf="@+id/tv_height_weight"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/tv_height_weight"
            app:layout_constraintTop_toBottomOf="@+id/tv_height_weight" />

        <TextView
            android:id="@+id/tv_born"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/born"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/tv_height_weight"
            app:layout_constraintTop_toBottomOf="@+id/tv_height_weight_value" />

        <TextView
            android:id="@+id/tv_nationality"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/nationality"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/tv_position"
            app:layout_constraintTop_toBottomOf="@+id/tv_position_value" />

        <TextView
            android:id="@+id/tv_nationality_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/indonesia"
            app:layout_constraintEnd_toEndOf="@+id/tv_nationality"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/tv_nationality"
            app:layout_constraintTop_toBottomOf="@+id/tv_nationality" />

        <TextView
            android:id="@+id/tv_born_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_24_agustus_2000"
            app:layout_constraintEnd_toEndOf="@+id/tv_born"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/tv_born"
            app:layout_constraintTop_toBottomOf="@+id/tv_born" />

        <TextView
            android:id="@+id/player_overview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="120dp"
            android:text="Player Overview"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/img_profile"
            app:layout_constraintTop_toBottomOf="@+id/img_profile" />

        <TextView
            android:id="@+id/tv_wins"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="36dp"
            android:text="Wins"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_profile" />

        <TextView
            android:id="@+id/tv_goals"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:text="Goals"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.898"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_profile" />

        <TextView
            android:id="@+id/tv_desciption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="12dp"
            android:layout_marginRight="20dp"
            android:text="A quietly–spoken yet authoritative figure, Hugo LlorisA quietly–spoken yet authoritative figure, Hugo Lloris is one of our longest–serving players. Following his arrival from Lyon in 2012, Hugo celebrated 10 years at the Club in August, 2022, having moved into our all–time top 10 appearance makers with his 416th in all competitions on the final day of 2021/22 – the day we clinched fourth place in the Premier Leagu is one of our longest–serving players. Following his arrival from Lyon in 2012, Hugo celebrated 10 years at the Club in August, 2022, having moved into our all–time top 10 appearance makers with his 416th in all competitions on the final day of 2021/22 – the day we clinched fourth place in the Premier LeaguA quietly–spoken yet authoritative figure, Hugo Lloris is one of our longest–serving players. Following his arrival from Lyon in 2012, Hugo celebrated 10 years at the Club in August, 2022, having moved into our all–time top 10 appearance makers with his 416th in all competitions on the final day of 2021/22 – the day we clinched fourth place in the Premier Leagu"
            android:textAlignment="viewStart"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.428"
            app:layout_constraintStart_toStartOf="@+id/player_overview"
            app:layout_constraintTop_toBottomOf="@+id/player_overview"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/tv_goals_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="136"
            android:textSize="23sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/tv_goals"
            app:layout_constraintHorizontal_bias="0.64"
            app:layout_constraintStart_toStartOf="@+id/tv_goals"
            app:layout_constraintTop_toBottomOf="@+id/tv_goals" />

        <TextView
            android:id="@+id/tv_appearances"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:text="Appearances"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.487"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_profile" />

        <TextView
            android:id="@+id/tv_wins_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="136"
            android:textSize="23sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/tv_wins"
            app:layout_constraintHorizontal_bias="0.529"
            app:layout_constraintStart_toStartOf="@+id/tv_wins"
            app:layout_constraintTop_toBottomOf="@+id/tv_wins" />

        <TextView
            android:id="@+id/tv_appearances_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="136"
            android:textSize="23sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/tv_appearances"
            app:layout_constraintHorizontal_bias="0.435"
            app:layout_constraintStart_toStartOf="@+id/tv_appearances"
            app:layout_constraintTop_toBottomOf="@+id/tv_appearances" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>